--- a/03_indexation.qmd
+++ b/03_indexation.qmd
@@ -4,7 +4,31 @@ editor:
     wrap: 72
 ---
 
-# Indexation d'objets avec R {.backgroundTitre}
+# Naviguer à l'intérieur des objets R (indexation) {.backgroundTitre}
+
+## Pour quoi faire?
+
+-   Extraire un élément d' un objet (ex : tous les nombres supérieurs à 10)
+
+-   Remplacer un élément par un autre (ex : remplacer toutes les chaînes
+    "Bov." par "Bovins")
+
+-   Ajouter un élément (ex : une nouvelle variable à un data.frame)
+
+```{r,echo=TRUE}
+nombres <-  1:20
+nombres[nombres>10]
+
+mes_lettres <- letters[1:5]
+mes_lettres[3] <- "g"
+mes_lettres
+
+mon_df <- data.frame(letters,LETTERS)
+mon_df["concat"] <- paste0(letters,LETTERS)
+mon_df[1,]
+```
+
+...
 
 ## Vecteur, indexation avec les crochets:
 
@@ -26,57 +50,99 @@ editor:
 
 `x[x >10 & x < 15] renvoie le vecteur c(11.05, 14.05)`
 
-## Matrices et arrays,indexation avec les crochets:
+## Data.frame (1/3) : principes de navigation
 
-Indexation **par position** :
-
-`x <- matrix(c("Marion", "Benjamin", "Hélène", "Raymond"), nrow = 2, ncol = 2)`
-
-`x[1,] renvoie le vecteur c("Marion", "Hélène")`
-
-`x[,2] renvoie le vecteur c("Hélène", "Raymond")`
-
-`x[2,1] renvoie "Benjamin"`
-
-<br>
-
-```{.r}
-     [,1]       [,2]     
-[1,] "Marion"   "Hélène" 
-[2,] "Benjamin" "Raymond"
-```
-
-## Listes :
-
--   Indexation **par position** :
-
-`x <- list(c(TRUE, TRUE, FALSE), c(8.04, 18.01, 11.05, 14.05), "804")`
-
-`x[[2]] renvoie le deuxième vecteur de la liste x soit c(8.04, 18.01, 11.05, 14.05)`
-
-`x[[2]][1] renvoie le premier élément du deuxième vecteur de la liste x soit 8.04`
-
--   Indexation **par nom** si les vecteurs sont nommés avec l'opérateur
-    \$ :
-
-`x <- list(grp = c("Auguste", "Justine", "Sébastien", "Anne-Marie"), prt = c("Hélène", "Raymond"), enf = c("Marion", "Benjamin")`
-
-`x$grp renvoie le vecteur nommé "grp" de la liste x soit c("Auguste", "Justine", "Sébastien", "Anne-Marie")`
-
-`x$enf[1] renvoie le premier élément du vecteur nommé "enf" de la liste x soit "Marion"`
-
-## Data.frame (1/2)
-
--   Indexation **par position** : comme pour les matrices
+-   Indexation **par position** : \[no de ligne, no de colonne\]
 
 -   Indexation **par nom** : les vecteurs d'une data.frame sont nommés
     et accessibles directement dans les crochets ou via l'opérateur \$
 
--   Les moyens d'indexation peuvent se combiner
+-   Les moyens d'indexation peuvent se combiner et permettre de filtrer
+    les colonnes et les lignes (équivalent de `select()` et `filter()`)
 
 → Il y a donc une multitude de façons d'accéder à une valeur dans un
 data.frame !
 
-## Data.frame (2/2)
+## Data.frame (2/3) : illustration
 
 ![](img/clipboard-premon-sexe-taille.png){fig-align="center"}
+
+## Data.frame (3/3) : exemple de code
+
+```{r,echo=TRUE,eval=F}
+
+mon_df <- data.frame(letters,LETTERS) # création du data.frame avec les lettres de l'alphabet
+mon_df[1,] # un data.frame avec uniquement la 1ère ligne
+mon_df[,1] # un vecteur avec la 1ère colonne,
+mon_df$letters[1:4]  # idem que ci-dessus mais comme c'est un vecteur je peux l'indexer aussi (4 premières valeurs)
+mon_df["letters"] # attention si pas de virgule, renvoie un data.frame d'une colonne
+mon_df[["letters"]] # pour extraire le vecteur, il faut mettre deux crochets
+```
+
+```{r}
+
+mon_df <- data.frame(letters,LETTERS) # création du data.frame avec les lettres de l'alphabet
+mon_df[1,] # un data.frame avec uniquement la 1ère ligne
+mon_df[,1] # un vecteur avec la 1ère colonne,
+mon_df$letters[1:4]  # idem que ci-dessus mais comme c'est un vecteur je peux l'indexer aussi (4 premières valeurs)
+mon_df["letters"] # un data.frame avec uniquement les lignes 1 et 3 de la colonne `letters`
+mon_df[["letters"]]
+```
+
+## Création ou modification de variables dans un data.frame en R de base
+
+-   Avec **R de base**, on utilise l'opérateur d'affectation :
+
+    -   `table$new_var <- variable` → formule générique
+
+    -   `table["new_var"] <- valeur_constante` → création d'une
+        constante
+
+    -   `table[["new_var"]] <- valeur_constante` → création d'une
+        constante
+
+    -   `table$new_var <- fonction(table$var1)` → création à partir
+        d'une formule
+
+## Listes
+
+Indexation **par position** :
+```{.r}
+   `x <- list(c(TRUE, TRUE, FALSE), c(8.04, 18.01, 11.05, 14.05), "804")`
+   `x[[2]] renvoie le deuxième vecteur de la liste x soit c(8.04, 18.01, 11.05, 14.05)`
+   `x[[2]][1] renvoie le premier élément du deuxième vecteur de la liste x soit 8.04`
+Attention :
+    `x[2], avec de simples crochets, renvoie une liste composée d'un élément : le 2e vecteur de la liste x`
+```
+
+Indexation **par nom** si les vecteurs sont nommés avec l'opérateur \$ :
+```{.r}
+   `x <- list(grp = c("Auguste", "Justine", "Sébastien", "Anne-Marie"), prt = c("Hélène", "Raymond"), enf = c("Marion", "Benjamin")`
+   `x$grp renvoie le vecteur nommé "grp" de la liste x soit c("Auguste", "Justine", "Sébastien", "Anne-Marie")`
+   `x$enf[1] renvoie le premier élément du vecteur nommé "enf" de la liste x soit "Marion"`
+```
+NB : Possibilité d'utiliser la fonction `pluck()` du package purrr (pour éviter de s'y perdre)
+```{.r}
+   `x <- list(c(TRUE, TRUE, FALSE), c(8.04, 18.01, 11.05, 14.05), "804")`
+   `pluck(x,2) renvoie le deuxième vecteur de la liste x soit c(8.04, 18.01, 11.05, 14.05)`
+   `pluck(x,2,1) renvoie le premier élément du deuxième vecteur de la liste x soit 8.04`
+
+
+```
+
+## Matrices et arrays, indexation avec les crochets:
+
+Indexation **par position** :
+
+-   `x <- matrix(c("Marion", "Benjamin", "Hélène", "Raymond"), nrow = 2, ncol = 2)`
+-   `x[1,] renvoie le vecteur c("Marion", "Hélène")`
+-   `x[,2] renvoie le vecteur c("Hélène", "Raymond")`
+-   `x[2,1] renvoie "Benjamin"`
+
+<br>
+
+``` r
+     [,1]       [,2]     
+[1,] "Marion"   "Hélène" 
+[2,] "Benjamin" "Raymond"
+```
